--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,16 @@ header {
   padding: 20px 0;
 }
 
+.navbar-brand {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
 .navbar-brand h1 {
-  font-size: 50px;
+  font-size: 60px;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -32,28 +40,51 @@ header {
 }
 
 .navbar-brand h1:hover {
-  color: #ff0000;
+  color: #746f6f;
+}
+
+.separator {
+  width: 100%;
+  height: 0px;
+  margin-bottom: 10px;
+}
+
+.navbar-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar-nav .nav-link {
   color: white;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 22px;
   padding: 5px 15px;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
 .navbar-nav .nav-link:hover {
-  background-color: #ff0000;
+  background-color: #746f6f;
 }
 
-h1 {
-  font-size: 50px;
-}
+@media (max-width: 991.98px) {
+  .navbar-toggler {
+    margin-right: auto;
+  }
 
-h2 {
-  font-size: 28px;
+  .navbar-collapse {
+    margin-top: 20px;
+  }
+
+  .navbar-nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar-nav .nav-link {
+    margin-bottom: 10px;
+  }
 }
 
 /* Estilos de la navegación */
@@ -158,7 +189,7 @@ h2 {
 
 .texto-cambios {
   flex: 0 0 100%;
-  text-align: left;
+  text-align: center;
   line-height: 1.5;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -219,7 +250,7 @@ h2 {
 
 /* Estilos específicos para la página de productos */
 #contenido-productos {
-  max-height: calc(100vh - 200px);
+  max-height: 800px;
   overflow-y: auto;
 }
 
@@ -240,20 +271,26 @@ h2 {
 .producto-imagen {
   transition: transform 0.3s ease;
   cursor: pointer;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 1.5;
+  object-fit: cover;
 }
 
 .producto:hover .producto-imagen {
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 
 .producto figcaption {
   font-family: "fuente";
-  font-size: 1.3em;
+  font-size: 1.5em;
   margin-top: 5px;
+  text-align: center;
 }
 
 /* Estilo del botón comprar */
 .boton-comprar {
+  font-size: 1.5em;
   margin-top: 10px;
   transition: background-color 0.3s ease;
   background-color: #333;
