--- a/scss/styles.css
+++ b/scss/styles.css
@@ -336,6 +336,4 @@ header {
   .texto-cambios {
     flex: 0 0 60%;
   }
-}
-
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
