--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,346 +1,411 @@
-/* Reset CSS */
+@charset "UTF-8";
+
+// Variables
+$primary-color: black;
+$secondary-color: white;
+$accent-color: #746f6f;
+$font-family-primary: "fuente", Arial, Helvetica, sans-serif;
+$font-family-secondary: Arial, Helvetica, sans-serif;
+
+// Mixins
+@mixin transition($property, $duration, $timing-function) {
+  transition: $property $duration $timing-function;
+}
+
+// Animaciones
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideInUp {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+// Reset CSS
 * {
-    margin: 0;
-    padding: 0;
-    width: auto;
-    box-sizing: border-box;
-  }
-  
-  /* Estilos generales */
-  @font-face {
-    font-family: "fuente";
-    src: url(../resources/ShadowsIntoLight-Regular.ttf) format("truetype");
-  }
-  
-  body {
-    background-color: black;
-    color: white;
-    font-family: "fuente";
-  }
-  
-  /* Estilos del encabezado */
-  header {
-    background-color: black;
-    padding: 20px 0;
-  }
-  
+  margin: 0;
+  padding: 0;
+  width: auto;
+  box-sizing: border-box;
+}
+
+// Estilos generales
+@font-face {
+  font-family: "fuente";
+  src: url(../resources/ShadowsIntoLight-Regular.ttf) format("truetype");
+}
+
+body {
+  background-color: $primary-color;
+  color: $secondary-color;
+  font-family: $font-family-primary;
+}
+
+// Estilos del encabezado
+header {
+  background-color: $primary-color;
+  padding: 20px 0;
+
   .navbar-brand {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
     margin-top: 20px;
+    animation: fadeIn 1s ease;
+
+    h1 {
+      font-size: 60px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      @include transition(color, 0.3s, ease);
+
+      &:hover {
+        color: $accent-color;
+      }
+    }
   }
-  
-  .navbar-brand h1 {
-    font-size: 60px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    transition: color 0.3s ease;
-  }
-  
-  .navbar-brand h1:hover {
-    color: #746f6f;
-  }
-  
+
   .separator {
     width: 100%;
     height: 0px;
     margin-bottom: 10px;
   }
-  
+
   .navbar-nav {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    .nav-link {
+      color: $secondary-color;
+      text-decoration: none;
+      font-size: 22px;
+      padding: 5px 15px;
+      border-radius: 5px;
+      @include transition(background-color, 0.3s, ease);
+
+      &:hover {
+        background-color: $accent-color;
+      }
+    }
   }
-  
-  .navbar-nav .nav-link {
-    color: white;
-    text-decoration: none;
-    font-size: 22px;
-    padding: 5px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .navbar-nav .nav-link:hover {
-    background-color: #746f6f;
-  }
-  
+
   @media (max-width: 991.98px) {
     .navbar-toggler {
       margin-right: auto;
     }
-  
+
     .navbar-collapse {
       margin-top: 20px;
     }
-  
+
     .navbar-nav {
       flex-direction: column;
       align-items: center;
-    }
-  
-    .navbar-nav .nav-link {
-      margin-bottom: 10px;
+
+      .nav-link {
+        margin-bottom: 10px;
+      }
     }
   }
-  
-  /* Estilos de la navegación */
-  #navegacion-principal {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  #navegacion-principal .navbar-nav {
+}
+
+// Estilos de la navegación
+#navegacion-principal {
+  font-family: $font-family-secondary;
+
+  .navbar-nav {
     margin: 0 auto;
   }
-  
-  #navegacion-principal .nav-link {
-    color: white;
+
+  .nav-link {
+    color: $secondary-color;
     text-decoration: none;
     font-size: 18px;
     padding: 5px 10px;
     border-radius: 5px;
   }
-  
-  /* Estilos del contenido principal */
-  #contenido-principal {
-    padding: 20px 0;
-  }
-  
-  /* Estilos del carrusel */
-  .carousel-image {
+}
+
+// Estilos del contenido principal
+#contenido-principal {
+  padding: 20px 0;
+}
+
+// Estilos del carrusel
+.carousel {
+  &-image {
     height: 800px;
     object-fit: contain;
   }
-  
+
   .custom-carousel-indicators {
     position: static;
     margin-top: 20px;
     display: flex;
     justify-content: center;
+
+    button {
+      width: 92px !important;
+      height: 120px !important;
+      margin: 0 20px !important;
+      border: none !important;
+      opacity: 0.7 !important;
+      @include transition(opacity, 0.3s, ease !important);
+
+      &.active {
+        opacity: 1;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: scale-down;
+        border: 5px solid #000;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      }
+    }
   }
-  
-  .custom-carousel-indicators button {
-    width: 92px !important;
-    height: 120px !important;
-    margin: 0 20px !important;
-    border: none !important;
-    opacity: 0.7 !important;
-    transition: opacity 0.3s ease !important;
+}
+
+// Estilos del pie de página
+#pie-de-pagina {
+  padding: 20px;
+  text-align: center;
+  border-top: 1px solid $secondary-color;
+
+  .texto-pie {
+    small {
+      font-size: 18px;
+      color: $secondary-color;
+    }
+
+    address {
+      font-size: 18px;
+    }
   }
-  
-  .custom-carousel-indicators button.active {
-    opacity: 1;
-  }
-  
-  .custom-carousel-indicators button img {
-    width: 100%;
-    height: 100%;
-    object-fit: scale-down;
-    border: 5px solid #000;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  /* Estilos del pie de página */
-  #pie-de-pagina {
-    padding: 20px;
-    text-align: center;
-    border-top: 1px solid white;
-  }
-  
-  .texto-pie small {
-    font-size: 18px;
-    color: white;
-  }
-  
-  .texto-pie address {
-    font-size: 18px;
-  }
-  
-  /* Iconos del footer */
+
   .redes-sociales {
     margin-top: 20px;
+
+    a {
+      color: $secondary-color;
+      font-size: 30px;
+      margin: 0 10px;
+      animation: slideInUp 1s ease;
+    }
   }
-  
-  .redes-sociales a {
-    color: white;
-    font-size: 30px;
-    margin: 0 10px;
-  }
-  
-  /* Estilos específicos para la página de cambios */
-  .contenido-cambios {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
+}
+
+// Estilos específicos para la página de cambios
+.contenido-cambios {
+  display: flex;
+  flex-wrap: wrap;
+
   .imagen-cambios {
     flex: 0 0 100%;
     padding-right: 20px;
     margin-bottom: 20px;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
-  
-  .imagen-cambios img {
-    width: 100%;
-    height: auto;
-  }
-  
+
   .texto-cambios {
     flex: 0 0 100%;
     text-align: center;
     line-height: 1.5;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .texto-cambios h2 {
-    margin-top: 0;
-  }
-  
-  .texto-cambios ul {
-    margin-left: 20px;
-  }
-  
-  /* Estilos específicos para la página de contacto */
-  .formulario-contacto {
-    max-width: 500px;
-    margin: 0 auto;
-  }
-  
-  .campo-formulario {
-    margin-bottom: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .campo-formulario label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .campo-formulario input,
-  .campo-formulario textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .campo-formulario textarea {
-    height: 150px;
-  }
-  
-  .boton-formulario {
-    text-align: center;
-  }
-  
-  .boton-formulario button {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .boton-formulario button:hover {
-    background-color: #555;
-  }
-  
-  /* Estilos específicos para la página de productos */
-  #contenido-productos {
-    max-height: 800px;
-    overflow-y: auto;
-  }
-  
-  #contenido-productos h2 {
-    text-align: center;
-  }
-  
-  .fila-productos {
-    margin-bottom: 20px;
-  }
-  
-  .producto {
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 20px;
-  }
-  
-  .producto-imagen {
-    transition: transform 0.3s ease;
-    cursor: pointer;
-    width: 100%;
-    height: auto;
-    aspect-ratio: 1 / 1.5;
-    object-fit: cover;
-  }
-  
-  .producto:hover .producto-imagen {
-    transform: scale(1.2);
-  }
-  
-  .producto figcaption {
-    font-family: "fuente";
-    font-size: 1.5em;
-    margin-top: 5px;
-    text-align: center;
-  }
-  
-  /* Estilo del botón comprar */
-  .boton-comprar {
-    font-size: 1.5em;
-    margin-top: 10px;
-    transition: background-color 0.3s ease;
-    background-color: #333;
-    color: white;
-  }
-  
-  .boton-comprar:hover {
-    background-color: #555;
-  }
-  
-  /* Estilos específicos para la página de preguntas */
-  #contenido-texto {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: left;
-  }
-  
-  #contenido-texto ol {
-    padding-left: 20px;
-  }
-  
-  #contenido-texto ul {
-    padding-left: 20px;
-  }
-  
-  #mapa-retiro {
-    text-align: center;
-  }
-  
-  #mapa-retiro h3 {
-    margin-top: 20px;
-  }
-  
-  #mapa {
-    margin-top: 10px;
-  }
-  
-  @media (min-width: 768px) {
-    .contenido-cambios {
-      flex-wrap: nowrap;
+    font-family: $font-family-secondary;
+
+    h2 {
+      margin-top: 0;
     }
-  
+
+    ul {
+      margin-left: 20px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    flex-wrap: nowrap;
+
     .imagen-cambios {
       flex: 0 0 40%;
       margin-bottom: 0;
     }
-  
+
     .texto-cambios {
       flex: 0 0 60%;
     }
   }
-  
+}
+
+// Estilos específicos para la página de contacto
+.formulario-contacto {
+  max-width: 500px;
+  margin: 0 auto;
+
+  .campo-formulario {
+    margin-bottom: 20px;
+    font-family: $font-family-secondary;
+
+    label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    input,
+    textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    textarea {
+      height: 150px;
+    }
+  }
+
+  .boton-formulario {
+    text-align: center;
+
+    button {
+      padding: 10px 20px;
+      background-color: #333;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #555;
+      }
+    }
+  }
+}
+
+// Estilos específicos para la página de productos
+#contenido-productos {
+  max-height: 800px;
+  overflow-y: auto;
+
+  h2 {
+    text-align: center;
+  }
+
+  .fila-productos {
+    margin-bottom: 20px;
+  }
+
+  .producto {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 20px;
+
+    &-imagen {
+      @include transition(transform, 0.3s, ease);
+      cursor: pointer;
+      width: 100%;
+      height: auto;
+      aspect-ratio: 1/1.5;
+      object-fit: cover;
+    }
+
+    &:hover {
+      .producto-imagen {
+        transform: scale(1.2);
+      }
+    }
+
+    figcaption {
+      font-family: $font-family-primary;
+      font-size: 1.5em;
+      margin-top: 5px;
+      text-align: center;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      @include transition(opacity, 0.3s, ease);
+    }
+
+    &:hover .overlay {
+      opacity: 1;
+    }
+
+    .overlay-content {
+      text-align: center;
+      color: white;
+    }
+  }
+
+  .boton-comprar {
+    font-size: 1.5em;
+    margin-top: 10px;
+    @include transition(background-color, 0.3s, ease);
+    background-color: #333;
+    color: $secondary-color;
+
+    &:hover {
+      background-color: #555;
+    }
+  }
+}
+
+// Estilos específicos para la página de preguntas
+#contenido-texto {
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: left;
+
+  ol {
+    padding-left: 20px;
+  }
+
+  ul {
+    padding-left: 20px;
+  }
+
+  address {
+    font-size: 18px;
+  }
+}
+
+#mapa-retiro {
+  text-align: center;
+
+  h3 {
+    margin-top: 20px;
+  }
+
+  #mapa {
+    margin-top: 10px;
+  }
+}
