--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ header .navbar-brand {
   align-items: center;
   margin-bottom: 20px;
   margin-top: 20px;
-  animation: fadeIn 1s ease;
+  animation: fadeIn 10s ease;
 }
 
 header .navbar-brand h1 {
@@ -100,7 +100,7 @@ header .navbar-nav .nav-link:hover {
   }
 }
 #navegacion-principal {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 
 #navegacion-principal .navbar-nav {
@@ -175,7 +175,7 @@ header .navbar-nav .nav-link:hover {
   color: white;
   font-size: 30px;
   margin: 0 10px;
-  animation: slideInUp 1s ease;
+  animation: slideInUp 10s ease;
 }
 
 .contenido-cambios {
@@ -196,17 +196,28 @@ header .navbar-nav .nav-link:hover {
 
 .contenido-cambios .texto-cambios {
   flex: 0 0 100%;
-  text-align: center;
   line-height: 1.5;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
+}
+
+.contenido-cambios .texto-cambios h1 {
+  font-family: "fuente", Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-top: 1.5rem;
 }
 
 .contenido-cambios .texto-cambios h2 {
   margin-top: 0;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
+}
+
+.contenido-cambios .texto-cambios p {
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 
 .contenido-cambios .texto-cambios ul {
   margin-left: 20px;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -219,6 +230,10 @@ header .navbar-nav .nav-link:hover {
   }
   .contenido-cambios .texto-cambios {
     flex: 0 0 60%;
+    padding-left: 20px;
+  }
+  .contenido-cambios .texto-cambios h1 {
+    text-align: center;
   }
 }
 .formulario-contacto {
@@ -228,7 +243,7 @@ header .navbar-nav .nav-link:hover {
 
 .formulario-contacto .campo-formulario {
   margin-bottom: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 
 .formulario-contacto .campo-formulario label {
