--- a/scss/styles.css
+++ b/scss/styles.css
@@ -43,7 +43,7 @@ header .navbar-brand {
   align-items: center;
   margin-bottom: 20px;
   margin-top: 20px;
-  animation: fadeIn 1s ease;
+  animation: fadeIn 10s ease;
 }
 header .navbar-brand h1 {
   font-size: 60px;
@@ -93,7 +93,7 @@ header .navbar-nav .nav-link:hover {
 }
 
 #navegacion-principal {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 #navegacion-principal .navbar-nav {
   margin: 0 auto;
@@ -158,7 +158,7 @@ header .navbar-nav .nav-link:hover {
   color: white;
   font-size: 30px;
   margin: 0 10px;
-  animation: slideInUp 1s ease;
+  animation: slideInUp 10s ease;
 }
 
 .contenido-cambios {
@@ -176,15 +176,24 @@ header .navbar-nav .nav-link:hover {
 }
 .contenido-cambios .texto-cambios {
   flex: 0 0 100%;
-  text-align: center;
   line-height: 1.5;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
+}
+.contenido-cambios .texto-cambios h1 {
+  font-family: "fuente", Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-top: 1.5rem;
 }
 .contenido-cambios .texto-cambios h2 {
   margin-top: 0;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
+}
+.contenido-cambios .texto-cambios p {
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 .contenido-cambios .texto-cambios ul {
   margin-left: 20px;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 @media (min-width: 768px) {
   .contenido-cambios {
@@ -196,6 +205,10 @@ header .navbar-nav .nav-link:hover {
   }
   .contenido-cambios .texto-cambios {
     flex: 0 0 60%;
+    padding-left: 20px;
+  }
+  .contenido-cambios .texto-cambios h1 {
+    text-align: center;
   }
 }
 
@@ -205,7 +218,7 @@ header .navbar-nav .nav-link:hover {
 }
 .formulario-contacto .campo-formulario {
   margin-bottom: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 .formulario-contacto .campo-formulario label {
   display: block;
