--- a/css/styles_old.css
+++ b/css/styles_old.css
@@ -6,6 +6,7 @@
     opacity: 1;
   }
 }
+
 @keyframes slideInUp {
   0% {
     transform: translateY(20px);
@@ -16,6 +17,7 @@
     opacity: 1;
   }
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -27,6 +29,7 @@
   font-family: "fuente";
   src: url(../resources/ShadowsIntoLight-Regular.ttf) format("truetype");
 }
+
 body {
   background-color: black;
   color: white;
@@ -37,6 +40,7 @@ header {
   background-color: black;
   padding: 20px 0;
 }
+
 header .navbar-brand {
   display: flex;
   flex-direction: column;
@@ -45,6 +49,7 @@ header .navbar-brand {
   margin-top: 20px;
   animation: fadeIn 10s ease;
 }
+
 header .navbar-brand h1 {
   font-size: 60px;
   font-weight: bold;
@@ -52,19 +57,23 @@ header .navbar-brand h1 {
   letter-spacing: 2px;
   transition: color 0.3s ease;
 }
+
 header .navbar-brand h1:hover {
   color: #746f6f;
 }
+
 header .separator {
   width: 100%;
   height: 0px;
   margin-bottom: 10px;
 }
+
 header .navbar-nav {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 header .navbar-nav .nav-link {
   color: white;
   text-decoration: none;
@@ -73,9 +82,11 @@ header .navbar-nav .nav-link {
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
+
 header .navbar-nav .nav-link:hover {
   background-color: #746f6f;
 }
+
 @media (max-width: 991.98px) {
   header .navbar-toggler {
     margin-right: auto;
@@ -95,9 +106,11 @@ header .navbar-nav .nav-link:hover {
 #navegacion-principal {
   font-family: "fuente", Arial, Helvetica, sans-serif;
 }
+
 #navegacion-principal .navbar-nav {
   margin: 0 auto;
 }
+
 #navegacion-principal .nav-link {
   color: white;
   text-decoration: none;
@@ -110,16 +123,36 @@ header .navbar-nav .nav-link:hover {
   padding: 20px 0;
 }
 
+#bienvenida {
+  padding: 40px 0;
+  text-align: center;
+}
+
+#bienvenida h2 {
+  font-size: 46px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+#bienvenida p {
+  font-size: 26
+  px;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+
 .carousel-image {
   height: 800px;
   object-fit: contain;
 }
+
 .carousel .custom-carousel-indicators {
   position: static;
   margin-top: 20px;
   display: flex;
   justify-content: center;
 }
+
 .carousel .custom-carousel-indicators button {
   width: 92px !important;
   height: 120px !important;
@@ -128,15 +161,29 @@ header .navbar-nav .nav-link:hover {
   opacity: 0.7 !important;
   transition: opacity 0.3s ease !important;
 }
+
 .carousel .custom-carousel-indicators button.active {
   opacity: 1;
 }
+
 .carousel .custom-carousel-indicators button img {
   width: 100%;
   height: 100%;
-  object-fit: scale-down;
-  border: 5px solid #000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  object-fit: cover;
+  border: 3px solid #000;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 767.98px) {
+  .carousel .custom-carousel-indicators {
+    margin-top: 10px;
+  }
+
+  .carousel .custom-carousel-indicators button {
+    width: 60px !important;
+    height: 80px !important;
+    margin: 0 10px !important;
+  }
 }
 
 #pie-de-pagina {
@@ -144,16 +191,20 @@ header .navbar-nav .nav-link:hover {
   text-align: center;
   border-top: 1px solid white;
 }
+
 #pie-de-pagina .texto-pie small {
   font-size: 18px;
   color: white;
 }
+
 #pie-de-pagina .texto-pie address {
   font-size: 18px;
 }
+
 #pie-de-pagina .redes-sociales {
   margin-top: 20px;
 }
+
 #pie-de-pagina .redes-sociales a {
   color: white;
   font-size: 30px;
@@ -165,36 +216,44 @@ header .navbar-nav .nav-link:hover {
   display: flex;
   flex-wrap: wrap;
 }
+
 .contenido-cambios .imagen-cambios {
   flex: 0 0 100%;
   padding-right: 20px;
   margin-bottom: 20px;
 }
+
 .contenido-cambios .imagen-cambios img {
   width: 100%;
   height: auto;
 }
+
 .contenido-cambios .texto-cambios {
   flex: 0 0 100%;
   line-height: 1.5;
   font-family: "fuente", Arial, Helvetica, sans-serif;
 }
+
 .contenido-cambios .texto-cambios h1 {
   font-family: "fuente", Arial, Helvetica, sans-serif;
   text-align: center;
   margin-top: 1.5rem;
 }
+
 .contenido-cambios .texto-cambios h2 {
   margin-top: 0;
   font-family: "fuente", Arial, Helvetica, sans-serif;
 }
+
 .contenido-cambios .texto-cambios p {
   font-family: "fuente", Arial, Helvetica, sans-serif;
 }
+
 .contenido-cambios .texto-cambios ul {
   margin-left: 20px;
   font-family: "fuente", Arial, Helvetica, sans-serif;
 }
+
 @media (min-width: 768px) {
   .contenido-cambios {
     flex-wrap: nowrap;
@@ -216,15 +275,18 @@ header .navbar-nav .nav-link:hover {
   max-width: 500px;
   margin: 0 auto;
 }
+
 .formulario-contacto .campo-formulario {
   margin-bottom: 20px;
   font-family: "fuente", Arial, Helvetica, sans-serif;
 }
+
 .formulario-contacto .campo-formulario label {
   display: block;
   font-weight: bold;
   margin-bottom: 5px;
 }
+
 .formulario-contacto .campo-formulario input,
 .formulario-contacto .campo-formulario textarea {
   width: 100%;
@@ -232,12 +294,15 @@ header .navbar-nav .nav-link:hover {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+
 .formulario-contacto .campo-formulario textarea {
   height: 150px;
 }
+
 .formulario-contacto .boton-formulario {
   text-align: center;
 }
+
 .formulario-contacto .boton-formulario button {
   padding: 10px 20px;
   background-color: #333;
@@ -246,6 +311,7 @@ header .navbar-nav .nav-link:hover {
   border-radius: 4px;
   cursor: pointer;
 }
+
 .formulario-contacto .boton-formulario button:hover {
   background-color: #555;
 }
@@ -254,17 +320,21 @@ header .navbar-nav .nav-link:hover {
   max-height: 800px;
   overflow-y: auto;
 }
+
 #contenido-productos h2 {
   text-align: center;
 }
+
 #contenido-productos .fila-productos {
   margin-bottom: 20px;
 }
+
 #contenido-productos .producto {
   position: relative;
   overflow: hidden;
   margin-bottom: 20px;
 }
+
 #contenido-productos .producto-imagen {
   transition: transform 0.3s ease;
   cursor: pointer;
@@ -273,15 +343,18 @@ header .navbar-nav .nav-link:hover {
   aspect-ratio: 1/1.5;
   object-fit: cover;
 }
+
 #contenido-productos .producto:hover .producto-imagen {
   transform: scale(1.2);
 }
+
 #contenido-productos .producto figcaption {
   font-family: "fuente", Arial, Helvetica, sans-serif;
   font-size: 1.5em;
   margin-top: 5px;
   text-align: center;
 }
+
 #contenido-productos .producto .overlay {
   position: absolute;
   top: 0;
@@ -295,13 +368,16 @@ header .navbar-nav .nav-link:hover {
   opacity: 0;
   transition: opacity 0.3s ease;
 }
+
 #contenido-productos .producto:hover .overlay {
   opacity: 1;
 }
+
 #contenido-productos .producto .overlay-content {
   text-align: center;
   color: white;
 }
+
 #contenido-productos .boton-comprar {
   font-size: 1.5em;
   margin-top: 10px;
@@ -309,6 +385,7 @@ header .navbar-nav .nav-link:hover {
   background-color: #333;
   color: white;
 }
+
 #contenido-productos .boton-comprar:hover {
   background-color: #555;
 }
@@ -318,12 +395,15 @@ header .navbar-nav .nav-link:hover {
   margin: 0 auto;
   text-align: left;
 }
+
 #contenido-texto ol {
   padding-left: 20px;
 }
+
 #contenido-texto ul {
   padding-left: 20px;
 }
+
 #contenido-texto address {
   font-size: 18px;
 }
@@ -331,9 +411,11 @@ header .navbar-nav .nav-link:hover {
 #mapa-retiro {
   text-align: center;
 }
+
 #mapa-retiro h3 {
   margin-top: 20px;
 }
+
 #mapa-retiro #mapa {
   margin-top: 10px;
-}/*# sourceMappingURL=styles.css.map */
+}
