--- a/css/partials/_navigation.scss
+++ b/css/partials/_navigation.scss
@@ -1,6 +1,6 @@
 
 #navegacion-principal {
-    font-family: $font-family-base;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   
     .navbar-nav {
       margin: 0 auto;
