--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ header .navbar-nav .nav-link:hover {
 }
 
 #navegacion-principal {
-  font-family: "fuente", Arial, Helvetica, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 #navegacion-principal .navbar-nav {
   margin: 0 auto;
@@ -94,6 +94,7 @@ header .navbar-nav .nav-link:hover {
 }
 
 #contenido-principal {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 20px 0;
 }
 
@@ -168,7 +169,6 @@ header .navbar-nav .nav-link:hover {
 .contenido-cambios .texto-cambios {
   flex: 0 0 100%;
   line-height: 1.5;
-  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 .contenido-cambios .texto-cambios h1 {
   font-family: "fuente", Arial, Helvetica, sans-serif;
@@ -177,14 +177,9 @@ header .navbar-nav .nav-link:hover {
 }
 .contenido-cambios .texto-cambios h2 {
   margin-top: 0;
-  font-family: "fuente", Arial, Helvetica, sans-serif;
-}
-.contenido-cambios .texto-cambios p {
-  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 .contenido-cambios .texto-cambios ul {
   margin-left: 20px;
-  font-family: "fuente", Arial, Helvetica, sans-serif;
 }
 @media (min-width: 768px) {
   .contenido-cambios {
